--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my first git project</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
   <header>
-    <div>
+    <div class="logo">
         <img src="./assets/images/logo.png" alt="logo image">
     </div>
     <nav>
@@ -22,7 +23,7 @@
   <main>
     <section>
         <div id="home">
-            <h1>Hello people my name is <span>Sandboo </span></h1>
+            <h1>Hello people my name is <span>Sand<marquee>boo</marquee> </span></h1>
             <p>
                 "Sed ut perspiciatis unde omnis iste natus error sit voluptatem
                  accusantium doloremque laudantium, totam rem aperiam, 
